@@ -20,6 +20,9 @@ HISTORY
 - Refactor resolveuid to use portal_catalog and not waking up object.
   [toutpt]
 
+- Add tinymce-plone3.css. fix #10683: TinyMCE / Plone3.3 display text too big
+  [toutpt]
+
 1.1rc13 (2010-07-02)
 --------------------
 
